k8s/12-executor-small.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dremio-executor-small
  namespace: dremio
  labels:
    app: dremio
    role: executor
    tier: small
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Delete
  replicas: 0
  selector:
    matchLabels:
      app: dremio
      role: executor
      tier: small
  serviceName: dremio-executor
  template:
    metadata:
      labels:
        app: dremio
        role: executor
        tier: small
    spec:
      containers:
        - name: executor
          image: ghcr.io/rusha-corp/dremio-oss:2026.05.7
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - sleep 120
          ports:
            - containerPort: 45678
              name: inter-node
          readinessProbe:
            tcpSocket:
              port: 45678
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            tcpSocket:
              port: 45678
            failureThreshold: 300
            periodSeconds: 2
          resources:
            limits:
              cpu: "2"
              ephemeral-storage: 30Gi
              memory: 8Gi
            requests:
              cpu: 500m
              ephemeral-storage: 15Gi
              memory: 4Gi
          securityContext:
            runAsGroup: 0
            runAsUser: 0
          volumeMounts:
            - mountPath: /opt/dremio/conf
              name: dremio-config
            - mountPath: /opt/dremio/dist
              name: dremio-dist
            - mountPath: /opt/dremio/data
              name: dremio-local
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        kubernetes.io/hostname: vmi1594378.contaboserver.net
      securityContext:
        fsGroup: 0
      serviceAccount: dremio-elastic
      serviceAccountName: dremio-elastic
      subdomain: dremio-executor
      terminationGracePeriodSeconds: 1800
      volumes:
        - configMap:
            name: dremio-executor-config-small
          name: dremio-config
        - name: dremio-dist
          persistentVolumeClaim:
            claimName: dremio-dist
  volumeClaimTemplates:
    - metadata:
        name: dremio-local
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 30Gi
        storageClassName: longhorn
