k8s/05-ingress-tcp-flight.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dremio-flight-tcp
  namespace: dremio
spec:
  entryPoints:
    - dremio-flight
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dremio-coordinator-ingress
          port: 32010
